# kvs-cash-machine

./: .clang-format  .gitignore  BloomFilter.h  BloomFilter_8h__dep__incl.map  BloomFilter_8h__dep__incl.md5  BloomFilter_8h__incl.map  CMakeLists.txt  CacheMap.h  CacheMap_8h__dep__incl.map  CacheMap_8h__incl.map  CacheMap_8h__incl.md5  Doxyfile  KVS.h  KeyValueTypes.h  KeyValueTypes_8h.html  KeyValueTypes_8h__incl.md5  README.md  Shard.h  Shard_8h__incl.map  Shard_8h__incl.md5  Storage.h  StorageHashTable.h  Storage_8h__dep__incl.md5  Storage_8h__incl.map  annotated.html  classCacheMap.html  classCacheMap__coll__graph.map  classKey__coll__graph.map  classPtr-members.html  classPtr__coll__graph.map  classShard-members.html  classShard.html  classStorageHashTable__coll__graph.map  classes.html  doxygen_index.md  functions_type.html  functions_vars.html  globals.html  globals_type.html  globals_vars.html  (+4 more)
.github/workflows/: doxygen.yml
benchmark/: BenchmarkMain.cpp
docs/: BloomFilter_8cpp.html  BloomFilter_8cpp__incl.map  BloomFilter_8cpp__incl.md5  BloomFilter_8h.html  BloomFilter_8h__dep__incl.map  BloomFilter_8h__dep__incl.md5  BloomFilter_8h__incl.map  BloomFilter_8h__incl.md5  BloomFilter_8h_source.html  ByteArray_8cpp.html  ByteArray_8cpp__incl.map  ByteArray_8cpp__incl.md5  ByteArray_8h.html  ByteArray_8h__dep__incl.map  ByteArray_8h__dep__incl.md5  ByteArray_8h__incl.map  ByteArray_8h__incl.md5  ByteArray_8h_source.html  CacheMap_8cpp.html  CacheMap_8cpp__incl.map  CacheMap_8cpp__incl.md5  CacheMap_8h.html  CacheMap_8h__dep__incl.map  CacheMap_8h__dep__incl.md5  CacheMap_8h__incl.map  CacheMap_8h__incl.md5  CacheMap_8h_source.html  Doxyfile  KVSException_8cpp.html  KVSException_8cpp__incl.map  KVSException_8cpp__incl.md5  KVSException_8h.html  KVSException_8h__dep__incl.map  KVSException_8h__dep__incl.md5  KVSException_8h__incl.map  KVSException_8h__incl.md5  KVSException_8h_source.html  KVS_8cpp.html  KVS_8cpp__incl.map  KVS_8cpp__incl.md5  (+616 more)
docs/html/: BloomFilter_8h.html  BloomFilter_8h__incl.map  BloomFilter_8h__incl.md5  BloomFilter_8h_source.html  CacheMap_8h.html  CacheMap_8h__incl.md5  KVS_8h.html  KVS_8h__incl.md5  KeyValueTypes_8h.html  KeyValueTypes_8h__dep__incl.md5  KeyValueTypes_8h__incl.map  KeyValueTypes_8h__incl.md5  Shard_8h.html  (+38 more)
include/: .CacheMap.h.swp  .KeyValueTypes.h.swp  BloomFilter.h  ByteArray.h  CacheMap.h  KVS.h  KVSException.h  KeyValueTypes.h  Shard.h  ShardBuilder.h  Storage.h  StorageHashTable.h  doctest.h
search/: all_2.js  all_3.js  all_4.js  all_6.js  all_d.js  classes_2.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_4.js  functions_9.js  functions_a.js  functions_b.js  typedefs_3.js  variables_1.js  variables_9.js
src/: BloomFilter.cpp  ByteArray.cpp  CacheMap.cpp  KVS.cpp  KVSException.cpp  KeyValueTypes.cpp  Shard.cpp  ShardBuilder.cpp  Storage.cpp  StorageHashTable.cpp  Utils.cpp
test/: TestBloomFilter.cpp  TestByteArray.cpp  TestCacheMap.cpp  TestKVS.cpp  TestShard.cpp  TestShardBuilder.cpp  TestStorage.cpp  TestStorageHashTable.cpp
(+415 files in other folders)
